forgot to add examples/logging_client.rb to manifest in gemspec, so it wasn't bundled with the 0.3.0 release

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== 0.3.1
+ * *actually* add LoggingClient example
+
 == 0.3.0
  * added LoggingClient example, pretty printing for generated xml, terrible hack to cover weird response FreshBooks' API gives instead of 404s
 
